# Task-Breakdown-Assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD.md  DOCKER.md  LICENSE  README.md  cliff.toml  docker-compose.yml  env.docker.example  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml
backend/: .dockerignore  .gitignore  Dockerfile  env.example  pyproject.toml  pytest.ini  ruff.toml
backend/task_breakdown/: __init__.py  database.py  main.py  models.py  schemas.py
backend/task_breakdown/api/: guides.py  ratings.py  tasks.py
backend/task_breakdown/config/: logging_config.py
backend/task_breakdown/services/: ai_service.py
backend/tests/: conftest.py  test_ai_service.py  test_api_guides.py  test_api_ratings.py  test_api_tasks.py
docs/: DOCUMENTATION.md  index.md
docs/tutorials/: tutorial.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: GuideDisplay.tsx  TaskInput.tsx
