[tool.poetry]
name = "task-breakdown-assistant"
version = "0.1.0"
description = "AI-powered task breakdown assistant with beginner-friendly detailed guides. Generates step-by-step instructions for complex tasks using OpenAI API."
authors = ["Nimra Fayaz"]
license = "MIT"
homepage = "https://github.com/Nimra-Fayaz/task-breakdown-assistant"
repository = "https://github.com/Nimra-Fayaz/task-breakdown-assistant"
keywords = ["task-breakdown", "ai", "openai", "fastapi", "guide", "tutorial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
]
packages = [{include = "task_breakdown"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"
openai = {version = "^1.3.0", optional = true}
python-multipart = "^0.0.6"
google-generativeai = {version = "^0.8.5", optional = true}
ollama = "^0.1.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn task_breakdown.main:app --reload"
